--- a/package.json
+++ b/package.json
@@ -1,23 +1,41 @@
 {
-  "name": "xmldom2",
-  "version": "0.1.19",
+  "name": "@ramitos/xmldom",
+  "version": "1.0.0",
+  "license": "MIT",
+  "main": "./src/dom-parser.js",
   "description": "A W3C Standard XML DOM(Level2 CORE) implementation and parser(DOMParser/XMLSerializer).",
-  "keywords": ["w3c","dom","xml","parser","javascript","DOMParser","XMLSerializer"],
-  "author": "Antti Pirilä <antti.pirila@rekursio.fi>",
-  "homepage": "https://github.com/apirila/xmldom",
-  "repository": {"type": "git","url": "git://github.com/apirila/xmldom.git"},
-  "main": "./dom-parser.js",
-  "scripts" : { "test": "proof platform win32 && proof test */*/*.t.js || t/test" },
-  "engines": {"node": ">=0.1"},
-  "dependencies": {},
-  "devDependencies": { "proof": "0.0.28" },
-  "maintainers": [{"name": "Antti Pirilä","email": "antti.pirila@rekursio.fi"}],
-  "contributors": [
-    {"name" : "jindw (initial contributor)","email": "jindw@xidea.org","url": "http://www.xidea.org"},
-    {"name" : "Yaron Naveh","email" : "yaronn01@gmail.com","web" : "http://webservices20.blogspot.com/"},
-    {"name" : "Harutyun Amirjanyan","email" : "amirjanyan@gmail.com","web" : "https://github.com/nightwing"},
-    {"name" : "Alan Gutierrez","email" : "alan@prettyrobots.com","web" : "http://www.prettyrobots.com/"}
+  "keywords": [
+    "w3c",
+    "dom",
+    "xml",
+    "parser",
+    "javascript",
+    "DOMParser",
+    "XMLSerializer"
   ],
-  "bugs": {"url": "http://github.com/apirila/xmldom/issues"},
-  "licenses": [{"type": "LGPL","url": "http://www.gnu.org/licenses/lgpl.html","MIT":"http://opensource.org/licenses/MIT"}]
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ramitos/xmldom.git"
+  },
+  "author": "SÃ©rgio Ramos <mail@sergioramos.me>",
+  "contributors": [{
+    "name": "Antti Pirilâ€°",
+    "email": "antti.pirila@rekursio.fi"
+  }, {
+    "name": "jindw (initial contributor)",
+    "email": "jindw@xidea.org",
+    "url": "http://www.xidea.org"
+  }, {
+    "name": "Yaron Naveh",
+    "email": "yaronn01@gmail.com",
+    "web": "http://webservices20.blogspot.com/"
+  }, {
+    "name": "Harutyun Amirjanyan",
+    "email": "amirjanyan@gmail.com",
+    "web": "https://github.com/nightwing"
+  }, {
+    "name": "Alan Gutierrez",
+    "email": "alan@prettyrobots.com",
+    "web": "http://www.prettyrobots.com/"
+  }]
 }
